[workspace]
members = [
    "paseto-core",
    "paseto-json",
    "paseto-v1",
    "paseto-v2",
    "paseto-v3",
    "paseto-v3-aws-lc",
    "paseto-v4",
    "paseto-v4-sodium",
    "paseto-v5",
    "paseto-test",
    "paseto-bench",
]
resolver = "3"

[workspace.dependencies]
paseto-core = { path = "paseto-core", version = "0.1.0-rc.9" }
paseto-json = { path = "paseto-json", version = "0.1.0-rc.9" }
paseto-v1 = { path = "paseto-v1", version = "0.1.0-rc.9" }
paseto-v2 = { path = "paseto-v2", version = "0.1.0-rc.9" }
paseto-v3 = { path = "paseto-v3", version = "0.1.0-rc.9" }
paseto-v3-aws-lc = { path = "paseto-v3-aws-lc", version = "0.1.0-rc.9" }
paseto-v4 = { path = "paseto-v4", version = "0.1.0-rc.9" }
paseto-v4-sodium = { path = "paseto-v4-sodium", version = "0.1.0-rc.9" }
paseto-v5 = { path = "paseto-v5" }

[profile.dev.package."*"]
opt-level = 2
debug = false
incremental = false

[profile.release]
debug = 1
