[package]
name = "paseto-core"
version = "0.1.0-rc.9"
edition = "2024"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
repository = "https://github.com/conradludgate/paseto-rs"
description = "Core traits and encodings for PASETO/PASERK"
license = "Apache-2.0"
keywords = ["paseto", "paserk", "token", "security"]
categories = [
  "cryptography",
  "authentication",
  "encoding",
  "network-programming",
  "web-programming",
]

[features]
default = []
serde = ["dep:serde_core"]

[dependencies]
serde_core = { version = "1", default-features = false, optional = true }
