[package]
name = "paseto-json"
version = "0.1.0-rc.9"
edition = "2024"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
repository = "https://github.com/conradludgate/paseto-rs"
description = "JSON encoding for PASETO"
license = "Apache-2.0"
keywords = ["paseto", "paserk", "token", "security"]
categories = [
  "cryptography",
  "authentication",
  "encoding",
  "network-programming",
  "web-programming",
]

[features]
default = ["claims"]
claims = ["dep:jiff"]

[dependencies]
paseto-core = { workspace = true, features = ["serde"] }
serde_core = "1"
serde_json = "1"

jiff = { version = "0.2", features = ["serde"], optional = true }
