[package]
name = "paseto-test"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
paseto-core.workspace = true
paseto-json.workspace = true
paseto-v1.workspace = true
paseto-v2.workspace = true
paseto-v3.workspace = true
paseto-v3-aws-lc.workspace = true
paseto-v4.workspace = true
paseto-v4-sodium.workspace = true
paseto-v5.workspace = true
paseto-v6.workspace = true

hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
libtest-mimic = "0.8.1"
proptest = "1"
zerocopy = "0.8"

[[test]]
name = "paseto"
harness = false

[[test]]
name = "key_text"
harness = false

[[test]]
name = "key_id"
harness = false

[[test]]
name = "key_seal"
harness = false

[[test]]
name = "key_wrap"
harness = false

[[test]]
name = "key_pbkw"
harness = false
