[package]
name = "paseto-v3-aws-lc"
version = "0.1.0-rc.8"
edition = "2024"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
repository = "https://github.com/conradludgate/paseto-rs"
description = "PASETO/PASERK V3 based on AWS-LC"
license = "Apache-2.0"
keywords = ["paseto", "paserk", "token", "security"]
categories = [
  "cryptography",
  "authentication",
  "encoding",
  "network-programming",
  "web-programming",
]

[features]
default = []

# require non-FIPS
non-fips = ["aws-lc-rs/non-fips"]

# require FIPS
fips = ["aws-lc-rs/fips"]

[dependencies]
paseto-core.workspace = true

zerocopy = { version = "0.8", features = ["derive"] }

aws-lc-rs = "1.16"

[dev-dependencies]
paseto-json.workspace = true
