[package]
name = "paseto-v3"
version = "0.1.0-rc.9"
edition = "2024"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
repository = "https://github.com/conradludgate/paseto-rs"
description = "PASETO/PASERK V3 based on RustCrypto"
license = "Apache-2.0"
keywords = ["paseto", "paserk", "token", "security"]
categories = [
  "cryptography",
  "authentication",
  "encoding",
  "network-programming",
  "web-programming",
]

[features]
default = ["signing", "encrypting", "paserk"]

signing = ["verifying", "dep:getrandom"]
verifying = ["dep:p384", "p384?/ecdsa"]

encrypting = ["decrypting", "dep:getrandom"]
decrypting = ["dep:aes", "dep:ctr", "dep:hmac", "dep:hkdf"]

paserk = ["pbkw", "pie-wrap", "pke", "id"]
id = []
pbkw = ["encrypting", "dep:pbkdf2", "dep:getrandom"]
pie-wrap = ["encrypting", "dep:getrandom"]
pke = ["encrypting", "signing", "dep:getrandom", "p384?/ecdh"]

[dependencies]
paseto-core.workspace = true

hybrid-array = "0.4"
cipher = { version = "0.5", default-features = false }
digest = { version = "0.11", default-features = false }
getrandom = { version = "0.4", optional = true }
zerocopy = { version = "0.8", features = ["derive"] }

sha2 = { version = "0.11", default-features = false }

aes = { version = "0.9.0-rc.4", default-features = false, optional = true }
ctr = { version = "0.10.0-rc.4", default-features = false, optional = true }
hmac = { version = "0.13.0-rc.6", default-features = false, optional = true }
hkdf = { version = "0.13.0-rc.5", default-features = false, optional = true }
p384 = { version = "0.14.0-rc.8", default-features = false, optional = true }
pbkdf2 = { version = "0.13.0-rc.10", default-features = false, optional = true }

[dev-dependencies]
paseto-json.workspace = true
