[package]
name = "paseto-v4-sodium"
version = "0.1.0-rc.9"
edition = "2024"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
repository = "https://github.com/conradludgate/paseto-rs"
description = "PASETO/PASERK V4 based on libsodium"
license = "Apache-2.0"
keywords = ["paseto", "paserk", "token", "security"]
categories = [
  "cryptography",
  "authentication",
  "encoding",
  "network-programming",
  "web-programming",
]

[features]
default = []
zeroize = ["paseto-core/zeroize", "dep:zeroize"]

[dependencies]
paseto-core.workspace = true
libsodium-rs = "0.2"
zerocopy = { version = "0.8", features = ["derive"] }
zeroize = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
paseto-json.workspace = true
hex = "0.4"
