[package]
name = "paseto-v4"
version = "0.1.0-rc.8"
edition = "2024"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
repository = "https://github.com/conradludgate/paseto-rs"
description = "PASETO/PASERK V4 based on RustCrypto"
license = "Apache-2.0"
keywords = ["paseto", "paserk", "token", "security"]
categories = [
  "cryptography",
  "authentication",
  "encoding",
  "network-programming",
  "web-programming",
]

[features]
default = ["signing", "encrypting", "paserk"]

signing = ["verifying", "dep:getrandom", "dep:sha2"]
verifying = ["dep:ed25519-dalek", "dep:curve25519-dalek"]

encrypting = ["decrypting", "dep:getrandom"]
decrypting = ["dep:chacha20", "dep:blake2"]

paserk = ["pbkw", "pie-wrap", "pke", "id"]
id = ["dep:blake2"]
pbkw = ["encrypting", "dep:argon2", "dep:getrandom"]
pie-wrap = ["encrypting", "dep:getrandom"]
pke = ["encrypting", "signing", "dep:getrandom"]

[dependencies]
paseto-core.workspace = true

hybrid-array = "0.4"
cipher = "0.5"
digest = { version = "0.11", default-features = false }
getrandom = { version = "0.4", optional = true }
zerocopy = { version = "0.8", features = ["derive"] }

blake2 = { version = "0.11.0-rc.5", default-features = false, optional = true }
chacha20 = { version = "0.10", default-features = false, optional = true }
ed25519-dalek = { version = "3.0.0-pre.6", features = ["hazmat"], default-features = false, optional = true }
curve25519-dalek = { version = "5.0.0-pre.6", default-features = false, optional = true }
argon2 = { version = "0.6.0-rc.8", default-features = false, features = ["alloc"], optional = true }
sha2 = { version = "0.11", default-features = false, optional = true }

[dev-dependencies]
paseto-json.workspace = true
hex = "0.4"
