[package]
name = "paseto-v5"
version = "0.0.0"
edition = "2024"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
repository = "https://github.com/conradludgate/paseto-rs"
description = "DRAFT PASETO/PASERK V5 (post-quantum, ML-DSA-87) based on RustCrypto"
license = "Apache-2.0"
publish = false

[features]
default = ["signing", "encrypting", "paserk"]

signing = ["verifying", "dep:getrandom"]
verifying = ["dep:ml-dsa"]

encrypting = ["decrypting", "dep:getrandom"]
decrypting = ["dep:aes", "dep:ctr", "dep:hmac", "dep:hkdf"]

paserk = ["pbkw", "pie-wrap", "pke", "id"]
id = []
pbkw = ["encrypting", "dep:pbkdf2", "dep:getrandom"]
pie-wrap = ["encrypting", "dep:getrandom"]
pke = ["encrypting", "dep:ml-kem", "dep:getrandom"]
zeroize = ["paseto-core/zeroize", "dep:zeroize"]

[dependencies]
paseto-core.workspace = true

zeroize = { version = "1", features = ["derive"], optional = true }

hybrid-array = "0.4"
cipher = { version = "0.5", default-features = false }
digest = { version = "0.11", default-features = false }
getrandom = { version = "0.4", optional = true }
zerocopy = { version = "0.8", features = ["derive"] }

sha2 = { version = "0.11", default-features = false }

aes = { version = "0.9", default-features = false, optional = true }
ctr = { version = "0.10", default-features = false, optional = true }
hmac = { version = "0.13", default-features = false, optional = true }
hkdf = { version = "0.13", default-features = false, optional = true }
pbkdf2 = { version = "0.13", default-features = false, optional = true }

ml-dsa = { version = "=0.1.0-rc.10", optional = true }
ml-kem = { version = "0.3", features = ["getrandom"], optional = true }

[dev-dependencies]
paseto-json.workspace = true
